[gd_scene load_steps=6 format=3 uid="uid://dhgjjrelu1qd5"]

[ext_resource type="Texture2D" uid="uid://dtwthtfvwws0w" path="res://assets/bg/green_bg.png" id="1_gj3y7"]
[ext_resource type="FontFile" uid="uid://vqe8nm85q87s" path="res://fonts/Pixel Digivolve/Pixel Digivolve.otf" id="2_ulygp"]
[ext_resource type="Script" uid="uid://ua2t35tgphkk" path="res://scripts/noon.gd" id="2_wwirv"]
[ext_resource type="Texture2D" uid="uid://bp7qd6fv3grm0" path="res://assets/objects/cubicleRoom_view.png" id="2_ykq11"]
[ext_resource type="Texture2D" uid="uid://b20t1fd816ohr" path="res://assets/objects/red_button.png" id="3_wd86f"]

[node name="noon_bg" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gj3y7")
expand_mode = 3
script = ExtResource("2_wwirv")
metadata/_edit_use_anchors_ = true

[node name="CubicleRoom" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -545.5
offset_top = -482.0
offset_right = 545.5
offset_bottom = 482.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ykq11")

[node name="HeaderMargin" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Header" type="HBoxContainer" parent="HeaderMargin"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 200

[node name="TurnsLeft" type="Label" parent="HeaderMargin/Header"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_ulygp")
theme_override_font_sizes/font_size = 40
text = "Turns Left:"

[node name="Activity" type="Label" parent="HeaderMargin/Header"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_ulygp")
theme_override_font_sizes/font_size = 40
text = "Activity"

[node name="EnergyBar" type="ProgressBar" parent="HeaderMargin/Header"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_ulygp")
theme_override_font_sizes/font_size = 40

[node name="Time" type="Label" parent="HeaderMargin/Header"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_ulygp")
theme_override_font_sizes/font_size = 40
text = "Noon"

[node name="FooterMargin" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -700.0
offset_top = -200.0
offset_right = 700.0
grow_horizontal = 2
grow_vertical = 0

[node name="Footer" type="HBoxContainer" parent="FooterMargin"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="Eat" type="TextureButton" parent="FooterMargin/Footer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_wd86f")

[node name="EatLabel" type="Label" parent="FooterMargin/Footer/Eat"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.0
offset_right = 39.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ulygp")
theme_override_font_sizes/font_size = 40
text = "Eat"
horizontal_alignment = 1

[node name="SocialMediaButtom" type="TextureButton" parent="FooterMargin/Footer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_wd86f")

[node name="SocialMediaLabel" type="Label" parent="FooterMargin/Footer/SocialMediaButtom"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -141.0
offset_right = 141.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ulygp")
theme_override_font_sizes/font_size = 40
text = "Social Media"

[node name="TutorialReviewButton" type="TextureButton" parent="FooterMargin/Footer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_wd86f")

[node name="TutorialReviewLabel" type="Label" parent="FooterMargin/Footer/TutorialReviewButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -193.5
offset_right = 193.5
offset_bottom = 48.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ulygp")
theme_override_font_sizes/font_size = 40
text = "Tutorial Reviews"

[node name="SideQuestsButton" type="TextureButton" parent="FooterMargin/Footer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_wd86f")

[node name="SideQuestsLabel" type="Label" parent="FooterMargin/Footer/SideQuestsButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.0
offset_right = 133.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ulygp")
theme_override_font_sizes/font_size = 40
text = "Side Quests"

[connection signal="pressed" from="FooterMargin/Footer/Eat" to="." method="_on_eat_pressed"]
[connection signal="pressed" from="FooterMargin/Footer/SocialMediaButtom" to="." method="_on_social_media_buttom_pressed"]
[connection signal="pressed" from="FooterMargin/Footer/TutorialReviewButton" to="." method="_on_tutorial_review_button_pressed"]
[connection signal="pressed" from="FooterMargin/Footer/SideQuestsButton" to="." method="_on_side_quests_button_pressed"]
